environments/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: game-2048
      env: prod
  template:
    metadata:
      labels:
        app: game-2048
        env: prod
    spec:
      containers:
      - name: game-2048
        image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
