environments/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: game-2048
    env: prod
  ports:
  - port: 80
    targetPort: 80
